--- a/projectzero/Gemfile
+++ b/projectzero/Gemfile
@@ -5,8 +5,6 @@ gem 'rails', '3.2.11'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
-
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -36,3 +34,11 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'debugger'
+
+
+group :development, :test do
+gem 'sqlite3'
+end
+group :production do
+gem 'pg'
+end
