updated gitignore files (to include tmp/swp files) and readme (to include the url of my hello world ruby application)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,26 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore swp and tmp files.
+*.swp
+*~
+*#
+.#*
+*.log.*
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html
